--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
-  "name": "recipal",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.45.0",
-    "next": "16.0.7",
-    "postgres": "^3.4.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.8",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
-    "tailwindcss": "^4",
-    "tsx": "^4.21.0",
-    "typescript": "^5"
-  }
+	"name": "recipal",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint",
+		"seed": "tsx db/seed.ts"
+	},
+	"dependencies": {
+		"@emotion/cache": "^11.14.0",
+		"@mui/material-nextjs": "^7.3.6",
+		"@supabase/ssr": "^0.8.0",
+		"@supabase/supabase-js": "^2.86.2",
+		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.45.0",
+		"drizzle-zod": "^0.8.3",
+		"lucide-react": "^0.560.0",
+		"next": "16.0.7",
+		"postgres": "^3.4.7",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
+		"web-push": "^3.6.7",
+		"zod": "^4.1.13"
+	},
+	"devDependencies": {
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"autoprefixer": "^10.4.22",
+		"drizzle-kit": "^0.31.8",
+		"eslint": "^9",
+		"eslint-config-next": "16.0.7",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.18",
+		"tsx": "^4.21.0",
+		"typescript": "^5"
+	}
 }
